--- a/payroll-backend/.env
+++ b/payroll-backend/.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/payroll_db_module2
-JWT_SECRET=statutory_module_secret_2024
 PORT=5000
+MONGODB_URI=mongodb://localhost:27017/payroll
+SESSION_SECRET=your-super-secret-key-change-this-in-production
+REDIS_URL=redis://localhost:6379
 NODE_ENV=development
