--- a/payroll-backend/.env
+++ b/payroll-backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/payroll
+MONGO_URI=mongodb://localhost:27017/ibm_module2
 SESSION_SECRET=your-super-secret-key-change-this-in-production
 REDIS_URL=redis://localhost:6379
 NODE_ENV=development
